--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,70 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: The Phillimore Pearls</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: The Detective from Hawaii</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: At Chan Kee Lim’s</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml"><span epub:type="z3998:roman">IV</span>: The Oasis Special</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: Madden’s Ranch</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Tony’s Happy New Year</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: The Postman Sets Out</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: A Friendly Little Game</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: A Ride in the Dark</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: Bliss of the Homicide Squad</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Thorn Goes on a Mission</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Tramcar in the Desert</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: What <abbr>Mr.</abbr> Cherry Saw</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The Third Man</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: Will Holley’s Theory</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The Movies Are in Town</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: In Madden’s Footsteps</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: The Barstow Train</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: The Voice on the Air</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Petticoat Mine</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: End of the Postman’s Journey</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: The Road to Eldorado</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +91,7 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">The Chinese Parrot</a>
 				</li>
 			</ol>
 		</nav>
