Tweak colophon and imprint

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,17 +17,17 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<b>Norman C. Walz</b>,<br/>
+			<b>Norman <abbr epub:type="z3998:personal-name">C.</abbr> Walz</b>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
 			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">Distributed Proofreaders Canada Team</a><br/>
 			for<br/>
-			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page</a><br/>
+			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page Canada</a><br/>
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/chineseparrot0000bigg/mode/2up">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Still Life with Artichokes and a Parrot</i>,<br/>
 			a painting completed in the 17th Century by<br/>
-			<b>An Unknown Italian artist</b>.<br/>
+			<b>Anonymous</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
