Add z3998:name-title semantic to some abbreviations

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -50,7 +50,7 @@
 					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: The Tramcar in the Desert</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: What <abbr>Mr.</abbr> Cherry Saw</a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: What <abbr epub:type="z3998:name-title">Mr.</abbr> Cherry Saw</a>
 				</li>
 				<li>
 					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: The Third Man</a>
