--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<b>Norman <abbr epub:type="z3998:personal-name">C.</abbr> Walz</b>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">The Online Distributed Proofreaders Canada Team</a><br/>
+			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">Distributed Proofreaders Canada</a><br/>
 			for<br/>
 			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page Canada</a><br/>
 			and on digital scans from the<br/>
