--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 2018 by<br/>
 			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">Distributed Proofreaders Canada</a><br/>
 			for<br/>
-			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page Canada</a><br/>
+			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page</a><br/>
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/chineseparrot0000bigg/mode/2up">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
