Update URLs to new standards

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,15 +15,15 @@
 			was published in 1926 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Earl_Derr_Biggers">Earl Derr Biggers</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
 			<b>Norman <abbr epub:type="z3998:personal-name">C.</abbr> Walz</b>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net">Distributed Proofreaders Canada</a><br/>
+			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net/">Distributed Proofreaders Canada</a><br/>
 			for<br/>
 			<a href="https://www.fadedpage.com/showbook.php?pid=20180799">Faded Page</a><br/>
 			and on digital scans from the<br/>
-			<a href="https://archive.org/details/chineseparrot0000bigg/mode/2up">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/chineseparrot0000bigg">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Still Life with Artichokes and a Parrot</i>,<br/>
 			a painting completed in the 17th Century by<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>May 17, 2023, 4:37 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/earl-derr-biggers/the-chinese-parrot">standardebooks.org/ebooks/earl-derr-biggers/the-chinese-parrot</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
