--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<b>Norman <abbr epub:type="z3998:personal-name">C.</abbr> Walz</b>,<br/>
+			<b epub:type="z3998:personal-name">Norman <abbr epub:type="z3998:personal-name">C.</abbr> Walz</b>,<br/>
 			and is based on a transcription produced in <time>2018</time> by<br/>
 			<b epub:type="z3998:personal-name">Al Haines</b>, <b epub:type="z3998:personal-name">Cindy Beyer</b>, and <a href="https://www.pgdpcanada.net/">Distributed Proofreaders Canada</a><br/>
 			for<br/>
@@ -27,7 +27,7 @@
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Still Life with Artichokes and a Parrot</i>,<br/>
 			a painting completed in the 17th Century by<br/>
-			<b>Anonymous</b>.<br/>
+			<b>An Unknown Artist</b>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in <time>2014</time> and <time>2009</time> by<br/>
